--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-jai shree krishna
-jai shree radhe
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basic HTML Page</title>
+</head>
+<body>
+    <h1>Welcome to My Page</h1>
+    <p>Jai Shree Krishna</p>
+</body>
+</html>
