--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Welcome to My Page</h1>
     <p>Jai Shree Krishna</p>
-    This is test experiment
+    This is test experiment - This is Ninjas Team Demo
 </body>
 </html>
